challenge_solutions/ingresses/greeter-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-example
spec:
  rules:
  - host: greeter.minikube
    http:
      paths:
      - backend:
          serviceName: toy-greeter-ui
          servicePort: 5000
        path: /
  - host: nginx.minikube
    http:
      paths:
      - backend:
          serviceName: nginx
          servicePort: 80
        path: /
